--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -23,21 +23,27 @@
         android:text="@string/crime_details_label"
         style="?android:listSeparatorTextViewStyle"
         />
-    <Button
-        android:id="@+id/crime_date_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:padding="80dp"
+        >
+        <Button
+            android:id="@+id/crime_date_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            />
+        <CheckBox
+            android:id="@+id/crime_solved_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/crime_solved_label"
         />
-    <CheckBox
-        android:id="@+id/crime_solved_check_box"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/crime_solved_label"
-        />
+
+    </LinearLayout>
 
 </LinearLayout>
